@@ -761,6 +761,14 @@ function taxonomy_term_view($term, $view_mode = 'full', $langcode = NULL) {
     $langcode = $GLOBALS['language_content']->language;
   }
 
+  // Allow modules to change the view mode.
+  $context = array(
+    'entity_type' => 'taxonomy_term',
+    'entity' => $term,
+    'langcode' => $langcode,
+  );
+  drupal_alter('entity_view_mode', $view_mode, $context);
+
   field_attach_prepare_view('taxonomy_term', array($term->tid => $term), $view_mode, $langcode);
   entity_prepare_view('taxonomy_term', array($term->tid => $term), $langcode);
 
